--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,18 +7,30 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <FrameLayout
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
+        <!--自定义标题栏-->
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
-            android:background="#D18484"
+            android:background="#969C99"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
-    </FrameLayout>
 
+            <!-- 悬浮按钮-->
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="16dp"
+            android:src="@drawable/yes"
+            app:elevation="8dp"
+           />
 
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+  <!--滑动自定义菜单-->
   <com.google.android.material.navigation.NavigationView
       android:id="@+id/navView"
       android:layout_width="match_parent"
